Add metering panel to admin console.
Now it has usage tables for disk usage,
network traffic usage, network(neutron) usage,
objectstore usage and stat charts.
Since tables are asynchronously loading and
rows for that will be updated, the javascript filter for
tables doesn't work.

Implements bp ceilometer.

Change-Id: I9e6c2d25c2587a7642271e43109bc67e2ea1726f

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2085,5 +2085,22 @@ div.network {
   }
 }
 
-
+#ceilometer-stats .form-horizontal {
+  .control-label {
+    width: auto;
+  }
+  .controls {
+    float: left;
+    margin-left: 0;
+  }
+  .control-group {
+    float: left;
+    margin-right: 20px;
+  }
+  .btn {
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 18px;
+  }
+}
 
