--- a/openstack_dashboard/dashboards/admin/ceilometer/templates/ceilometer/index.html
+++ b/openstack_dashboard/dashboards/admin/ceilometer/templates/ceilometer/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Ceilometer Overview" %}{% endblock %}
+{% block title %}{% trans "Resources usage Overview" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Ceilometer Overview")%}
+  {% include "horizon/common/_page_header.html" with title=_("Resources usage Overview")%}
 {% endblock page_header %}
 
 {% block main %}
