Rename ceilometer panel to metering.
Remove the set definition of permission list in allowed method of
tabs.

Change-Id: I4c4d8037aea3ef195847b173662209d4d5807882

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
@@ -25,7 +25,7 @@
       });
 </script>
 {% endspaceless %}
-<div id="samples_url" url="{% url "horizon:admin:ceilometer:samples" %}"></div>
+<div id="samples_url" url="{% url "horizon:admin:metering:samples" %}"></div>
 <div id="ceilometer-stats">
     <form class="form-horizontal">
       <div class="control-group">
