--- a/openstack_dashboard/templates/_stylesheets.html
+++ b/openstack_dashboard/templates/_stylesheets.html
@@ -2,6 +2,7 @@
 
 {% compress css %}
 <link href='{{ STATIC_URL }}dashboard/less/horizon.less' type='text/less' media='screen' rel='stylesheet' />
+<link href='{{ STATIC_URL }}horizon/lib/css/datepicker.css' type='text/css' rel='stylesheet' />
 {% endcompress %}
 
 <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/img/favicon.ico"/>
